syntax = "proto3";

package dcrticketmatcher;

service SplitTicketMatcherService {
    rpc FindMatches (FindMatchesRequest) returns (FindMatchesResponse);
    rpc GenerateTicket (GenerateTicketRequest) returns (GenerateTicketResponse);
    rpc FundTicket (FundTicketRequest) returns (FundTicketResponse);
    rpc FundSplitTx (FundSplitTxRequest) returns (FundSplitTxResponse);
    rpc Status (StatusRequest) returns (StatusResponse);
}

message TxOut {
    uint64 value = 1;
    bytes script = 2;
}

message TxIn {
    bytes prev_hash = 1;
    int32 prev_index = 2;
    bytes script_sig = 3;
}

message OutPoint {
    bytes prev_hash = 1;
    int32 prev_index = 2;
    int32 tree = 3;
}

message FindMatchesRequest {
    uint64 amount = 1;
}

message FindMatchesResponse {
    int32 session_id = 1;
    uint64 amount = 2;
    uint64 fee = 3;
}

message GenerateTicketRequest {
    int32 session_id = 1;
    TxOut commitment_output = 2;
    TxOut change_output = 3;
    TxOut split_tx_output = 4;
    TxOut split_tx_change = 5;
    repeated OutPoint split_tx_inputs = 6;
    string vote_address = 7;
}

message GenerateTicketResponse {
    bytes ticket = 1;
    bytes split_tx = 2;
    bytes revocation = 3;
}

message FundTicketRequest {
    int32 session_id = 1;
    bytes ticket_input_scriptsig = 2;
}

message FundTicketResponse {
    bytes ticket = 1;
}

message FundSplitTxRequest {
    int32 session_id = 1;
    repeated bytes split_tx_scriptsigs = 2;
}

message FundSplitTxResponse {
    bytes split_tx = 1;
}

message StatusRequest { }
message StatusResponse {
    uint64 ticket_price = 1;
}
